--- a/reviewer/templates/reviewer/base.html
+++ b/reviewer/templates/reviewer/base.html
@@ -13,7 +13,7 @@
     <div id="sidebar">
         {% block sidebar %}
         <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="/reviewer">Home</a></li>
             <li><a href="/blog/">Blog</a></li>
         </ul>
         {% endblock %}
