--- a/reviewer/templates/registration/login.html
+++ b/reviewer/templates/registration/login.html
@@ -9,4 +9,7 @@
     {{ form.as_p }}
     <button type="submit">Login</button>
   </form>
+
+  blalala
+   <p> <a href= {% url "reviewer:password_reset" %}>Forgot your password?</a> </p>
 {% endblock %}
