--- a/reviewer/templates/reviewer/base.html
+++ b/reviewer/templates/reviewer/base.html
@@ -13,8 +13,17 @@
     <div id="sidebar">
         {% block sidebar %}
         <ul>
-            <li><a href="/reviewer">Home</a></li>
-            <li><a href="/blog/">Blog</a></li>
+            <li><a href={% url "reviewer:home" %}>Home</a></li>
+            {% if user.is_authenticated %}
+            <li><a href={% url "reviewer:user_profile_id" pk=request.user.id %}>Profile</a></li>
+            <li><a href={% url 'reviewer:logout' %}> Log out</a></li>
+            {% endif %}
+
+            {% if not user.is_authenticated %}
+            <li><a href={% url 'reviewer:signup' %}> Sign up</a></li>
+            <li><a href={% url 'reviewer:login' %}> Log in</a></li>
+            {% endif %}
+
         </ul>
         {% endblock %}
     </div>
