--- a/reviewer/templates/registration/login.html
+++ b/reviewer/templates/registration/login.html
@@ -10,6 +10,6 @@
     <button type="submit">Login</button>
   </form>
 
-  blalala
-   <p> <a href= {% url "reviewer:password_reset" %}>Forgot your password?</a> </p>
+
+   <p> <a href= {% url "reviewer:password_reset" %}>Password vergessen?</a> </p>
 {% endblock %}
