--- a/reviewer/templates/reviewer/user_profile.html
+++ b/reviewer/templates/reviewer/user_profile.html
@@ -6,7 +6,7 @@ Profil
 
 {% block content %}
 
-{{ user.username }}
-<a href={% url 'reviewer:change_password' %}>pw change </a>
+<p>User: {{ user.username }}</p>
+<a href={% url 'reviewer:change_password' %}>Passwort ändern</a>
 
 {% endblock %}
