--- a/reviewer/templates/reviewer/base.html
+++ b/reviewer/templates/reviewer/base.html
@@ -3,7 +3,7 @@
 
 <html lang="de">
 <head>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="{% static 'reviewer/css/bootstrap.min.css' %}" >
     <link rel="stylesheet" href="{% static 'reviewer/css/bootstrap-theme.min.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
